added voice component.

--- a/src/bee/src/app/app.component.html
+++ b/src/bee/src/app/app.component.html
@@ -43,7 +43,15 @@
       </ng-template>
       <app-airquality></app-airquality>
     </mat-tab>
-  
+    
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <mat-icon class="example-tab-icon">keyboard_voice </mat-icon>
+        HTTP with Voice
+      </ng-template>
+      <app-voice></app-voice>
+    </mat-tab>
+
     <mat-tab>
       <ng-template mat-tab-label>
         <mat-icon class="example-tab-icon">done_all</mat-icon>
