--- a/src/bee/src/app/airquality/airquality.component.html
+++ b/src/bee/src/app/airquality/airquality.component.html
@@ -7,7 +7,7 @@
 
             <mat-form-field appearance="fill" class="example-full-width">
                 <mat-label>URL</mat-label>
-                <input matInput #svrUrl>
+                <input matInput [value]="apiUri" placeholder="/air/beijing">
                 <mat-icon matSuffix>location_searching</mat-icon>
             </mat-form-field>
 
